noinst_LIBRARIES=libparser.a
libparser_a_SOURCES=	error.hpp error.cpp files.hpp files.cpp \
			ini.hpp ini.cpp matrix.hpp matrix.cpp \
			mystream.hpp mystream.cpp parser.hpp parser.cpp \
			parsinfo.hpp parsinfo.cpp vals.hpp vals.cpp \
			vector.hpp vector.cpp vector3.hh vector3.cpp \
			utils.hpp constant.hpp