INCLUDES = -I$(srcdir)/../include/
noinst_LIBRARIES = libpar.a
libpar_a_SOURCES = \
	sindentcout.cc \
		parintrnl.cc defhdl.cc valhdl.cc \
		paramarg.cc cmdline.cc \
		parconsumerbase.cc parmanager.cc \
		parsource.cc \
		srcfile.cc srccmd.cc \
		csrchdl.cc cmanhdl.cc csrcfilehdl.cc \
	sindentcout.h \
		paramarg.h cmdline.h \
		parconsumerbase.h parconsumerovl.h parmanager.h \
		parsource.h \
		srcfile.h srccmd.h parintrnl.h
