INCLUDES = -I../include/
noinst_LIBRARIES = libpar.a
libpar_a_SOURCES = \
	sindentcout.cc \
		parintrnl.cc defhdl.cc defstrhdl.cc defstrlsthdl.cc valhdl.cc \
		paramarg.cc cmdline.cc \
		parconsumer.cc parmanager.cc \
		parsource.cc \
		srcfile.cc srccmd.cc \
		csrchdl.cc cmanhdl.cc csrcfilehdl.cc cconshdl.cc \
	sindentcout.h \
		paramarg.h cmdline.h \
		parconsumer.h parconsumerovl.h parmanager.h \
		parsource.h \
		srcfile.h srccmd.h \
		parintrnl.h valhdl.h valuehandler.h \
		parbase.h
