INCLUDES=		-I$(srcdir)/..
CXXFLAGS =		@CXXFLAGS@ -Wno-non-template-friend
noinst_LIBRARIES=	libexparse.a
libexparse_a_SOURCES=	\
	fcall.cpp fcall.hpp \
	function.cpp function.hpp \
	operator.cpp operator.hpp \
	tree.cpp tree.hpp \
	value.cpp value.hpp \
	linkedlist.h
# unused: mcache.cpp mcache.hpp 
